--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
             products: { value: '{{ products }}', default: '928,950', parser: value => JSON.parse('[' + value + ']') },
             sap: { value: '{{ sap }}', default: 'sap test' },
             campagna_riferimento: { value: '{{ campagna_riferimento }}', default: 'campagna test' },
-            token_in: { value: '{{ token_in }}', default: '1234' },
             supplier_name: { value: '{{ supplier_name }}', default: '1234' },
             useFo: { value: '{{ useFo }}', default: '0', parser: value => !!Number(value) },
             useHeaderScroll: { value: '{{ useHeaderScroll }}', default: '1', parser: value => !!Number(value) },
             successURL: '{{ successURL }}',
             collapseToggleText: '{{ collapseToggleText }}',
-            account: { value: '{{ account }}', default: 'le-migliori-offerte' },
-            logoAccount: { value: '{{ accountLogo }}', default: 'logo-leMiglioriOfferte-horizontal.png' },
-            logoAccountMobile: { value: '{{ accountLogoMobile }}', default: 'logo-leMiglioriOfferte-horizontal.png' },
+            account: { value: '{{ account }}', default: '' },
+            logoAccount: { value: '{{ accountLogo }}', default: '' },
+            logoAccountMobile: { value: '{{ accountLogoMobile }}', default: '' },
+            token_in: '{{ token_in }}',
 
             //copy
             copyTitle: `{{ copyTitle }}`,
